--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,6 +34,7 @@ subjects:
 - !lcsh 'Children''s stories, English'
 - !lcsh 'Fairy tales'
 - !lcc 'PZ'
+- GITenberg
 tableOfContents: The two brothers -- The jar of rosemary -- The promise -- The plate
   of pancakes -- Little Maid Hildegarde -- The apple dumpling -- The king's servant
   -- The great white bear -- The song that traveled -- The quest for the nightingale
